--- a/sections/product-recommendations-10.liquid
+++ b/sections/product-recommendations-10.liquid
@@ -113,7 +113,7 @@
   
   {% schema %}
     {
-      "name": "Product recommendations 10",
+      "name": "Product recommendation 10",
       "settings": [
         {
           "type": "checkbox",
