--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,106 +1,37 @@
 {% comment %} code change - am. loads one of many product templates based on tag.  
 previously loaded section 'product-template' only  {% endcomment %}
 {%- liquid
-  assign product_template2 = false
-  assign product_template3 = false
-  assign product_template4 = false
-  assign product_template5 = false
-  assign product_template6 = false
-  assign product_template7 = false
-  assign product_template8 = false
-  assign product_template9 = false
-  assign product_template10 = false
+  assign product_template2 = false   assign product_template3 = false   assign product_template4 = false
+  assign product_template5 = false   assign product_template6 = false   assign product_template7 = false
+  assign product_template8 = false   assign product_template9 = false   assign product_template10 = false
   for tag in product.tags
     if tag contains 'page-2-socks'
       assign product_template2 = true
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-3-adult-socks'
-      assign product_template2 = false
       assign product_template3 = true
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-4-underwear-boxers'
-      assign product_template2 = false
-      assign product_template3 = false
       assign product_template4 = true
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-5-underwear-boyshorts'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
       assign product_template5 = true
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-6-baby-basics'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
       assign product_template6 = true
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-7-face-masks'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
       assign product_template7 = true
-      assign product_template8 = false
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-8-merino-wool'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
       assign product_template8 = true
-      assign product_template9 = false
-      assign product_template10 = false
+      break
     elsif tag contains 'page-9-pajamas'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
       assign product_template9 = true
-      assign product_template10 = false
+      break
     elsif tag contains 'page-10-tights'
-      assign product_template2 = false
-      assign product_template3 = false
-      assign product_template4 = false
-      assign product_template5 = false
-      assign product_template6 = false
-      assign product_template7 = false
-      assign product_template8 = false
-      assign product_template9 = false
       assign product_template10 = true
+      break
     endif
   endfor
 
